alb/listener.tf
resource "aws_lb_listener" "https" {
count = var.enable_https ? 1 : 0  
load_balancer_arn = aws_lb.this.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"

  certificate_arn = aws_acm_certificate_validation.this.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.backend.arn
  }
}
#resource "aws_lb_listener" "https" {
#  load_balancer_arn = aws_lb.this.arn
#  port              = 443
#  protocol          = "HTTPS"
#  ssl_policy        = "ELBSecurityPolicy-2016-08"
#  certificate_arn = var.certificate_arn  
# default_action {
#    type             = "forward"
#   target_group_arn = aws_lb_target_group.backend.arn
# }
#  tags = {
#    Project     = var.project
#    Environment = var.environment
#  }
#}
resource "aws_lb_listener" "http_redirect" {
  load_balancer_arn = aws_lb.this.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }

  tags = {
    Project     = var.project
    Environment = var.environment
  }
}
